[package]
name = "oof"
version = "0.0.1"
authors = ["Matt Garnett <crates@garnett.dev>"]
license = "Apache-2.0"
description = "Naive proof scheme for accelerated testing"
repository = "https://github.com/quilt/oof"
keywords = ["eth2", "proof"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
bonsai = { version = "0.2.0", default-features = false, features=["u128"] }
sha2 = "0.8.0"
